[package]
name = "cosmwasm-cpamm"
version = "0.1.0"
edition = "2024"
authors = ["Yash Sharma <iamyxsh@icloud.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "2.2.0", features = ["staking"] }
cw0 = {  version = "0.10.0" }
cw2 = { version = "2.0.0" }
cw20 = { version = "2.0.0" }
cw20-base = { version = "2.0.0", features = ["library"] }
cosmwasm-storage = { version = "1.0.0-beta" }
cw-storage-plus = "2.0"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.11" }
cosmwasm-schema = { version = "2.2.0" }
